# hhparser

./: .gitignore  Cargo.toml  readme.md
src/: export.rs  main.rs  parser.rs  request.rs  test_full.json  test_one_item.json
