[package]
name = "hhparser"
version = "0.1.0"
authors = ["Kirill Tikhonov <yaslimline@gmail.com"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
tokio-io = "0.1.13"
reqwest="0.10.6"
urlencoding = "1.1.1"
serde_json = "1.0.56"